--- a/careportsapp/src/main/resources/application.properties
+++ b/careportsapp/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.url= jdbc:mysql://localhost:3306/casupportlog
 server.port=8091
 
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
