--- a/careportsapp/src/main/resources/application.properties
+++ b/careportsapp/src/main/resources/application.properties
@@ -6,4 +6,7 @@ spring.datasource.url= jdbc:mysql://localhost:3306/casupportlog
 server.port=8091
 
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+#spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+#rest.client.origin=http://10.74.209.146:4200
+rest.client.origin=http://localhost:4200
