--- a/careportsapp/src/main/resources/application.properties
+++ b/careportsapp/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.show-sql=true
 
 #rest.client.origin=http://10.74.209.146:4200
 rest.client.origin=http://localhost:4200
+#server.servlet.context-path=/api
